--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -71,5 +71,5 @@ jobs:
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
-          name: app](#)
-
+          name: app-release
+          path: app/build/outputs/apk/release/app-release.apk
