--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -40,6 +40,7 @@ jobs:
           if [ ! -f go.mod ]; then
             go mod init github.com/vmanoilov/s3scanner-android
           fi
+          go get golang.org/x/mobile/bind
 
       - name: Install Gomobile
         run: |
@@ -56,20 +57,5 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build Debug APK
-        run: ./gradlew assembleDebug
-
-      - name: Build Release APK
-        run: ./gradlew assembleRelease
-
-      - name: Upload Debug APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug
-          path: app/build/outputs/apk/debug/app-debug.apk
-
-      - name: Upload Release APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-release
-          path: app/build/outputs/apk/release/app-release.apk
+      - name: Build Debug](#)
+
