--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -57,5 +57,5 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build Debug](#)
-
+      - name: Build Debug
+  run: ./gradlew buildDebug
